# LegalForecastBench

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_RELEASE_DATES.md  README.md  SECURITY.md  manifest  plan.md  pyproject.toml
.agents/: AGENTS.md
.github/: dependabot.yml
docs/: METHODS.md  README.md  acquisition-systemd-launcher.md  acquisition.md  cohort-policy.json  community-submissions.md  cycle-1-release-notes.md  data_card.md  ethics.md  human-baseline-protocol.md  issue-terminal-map.md  labeling-policy.json  labeling-protocol.md  methodology.md  model_card_template.md  multiharness-adapter-spec.md  multiharness-artifact-compatibility.md  official-run-runbook.md  official_aggregation.md  official_eval_environment.md  outcome_rules_appendix.md  preregistration.md  preregistration_template.md  prior-art-positioning.md  private_storage_layout.md  private_store_export.md  publication-governance.json  publication-governance.md  reproduce-or-audit.md  result_tiers.md  run_card_schema.json  run_card_template.md  target_model_release_dates.md  v0.1_alpha_release_notes.md  withdrawal_workflow.md
legalforecast/: __init__.py  _datetime.py  _hashing.py  _json_io.py  _record_validation.py  cli.py  logging.py  path_safety.py
manifests/: README.md
model_registries/: cycle-1-2026-06-30.json  cycle-1-labeling-2026-07-12.json  cycle-1-provider-caps-2026-07-12.json  cycle-1-stage-b-judges-2026-07-12.json  pilot-2026-04-24_to_2026-05-18.json
protocols/: README.md  cycle_2026_05_official.preregistration.yaml  cycle_template.preregistration.yaml
scripts/: AGENTS.md  README.md  alpha_release_check.py  analyze_packet_completeness.py  build_alpha_release_bundle.py  build_release_bundle.py  probe_claude_code_native_containment.py  probe_codex_native_containment.py  reconstruct_packets.py  release_check.py  render_methods_preprint.py  smoke_infisical_systemd_exit_status.py  validate_local_assume_access.py  verify_review_blockers.py
tests/: README.md  conftest.py  disclosure_review_fixtures.py  test_ablation_modes.py  test_accounting_reporting.py  test_acquisition_cli.py  test_acquisition_contract.py  test_alpha_release_bundle.py  test_alpha_release_check.py  test_bankruptcy_adversary_role_regressions.py  test_baselines.py  test_batch_002_cli.py  test_bootstrap.py  test_budgeted_courtlistener_html_source.py  test_budgeted_docket_acquisition.py  test_budgeted_docket_acquisition_cli.py  test_budgeted_firecrawl.py  test_budgeted_firecrawl_abandoned_commit.py  test_cadence.py  test_candidate_discovery.py  test_case_dev_client.py  test_case_dev_config.py  test_case_dev_discovery.py  (+235 more)
(+366 files in other folders)
